# rtic-rp2040-uart

./: .envrc.sample  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
src/: heartbeat.rs  key.rs  keyboard.rs  main.rs  matrix.rs  ping.rs  rotary.rs  split.rs  transport.rs  util.rs
src/processor/: mapper.rs  mod.rs
src/processor/events/: mod.rs  none.rs  replace.rs
src/processor/events/rgb/: animation.rs  mod.rs
src/processor/input/: debounce.rs  flip.rs  mod.rs  none.rs
src/remote/: mod.rs
src/remote/transport/: mod.rs  uart.rs
