[package]
name = "rtic-rp2040-uart"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4.0"
frunk = { version = "0.4.2", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

cortex-m = "0.7.7"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["rt", "critical-section-impl"] }

rtic = { version = "2.1.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["rp2040"] }
rtic-sync = "1.3.0"

usb-device = "0.3.2"
usbd-human-interface-device = "0.5.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
enum-map = "2.7.3"

serde = { version = "1.0.204", default-features = false, features = ["derive"] }
postcard = { version = "1.0.8", features = ["alloc"] }
nb = "1.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(keyboard, values(any()))",
    "cfg(layout, values(any()))",
] }
